--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Babel==2.11.0
-matplotlib==3.7.2
-pandas==2.0.3
-seaborn==0.13.2
-streamlit==1.31.1
-numpy==1.24.3
+matplotlib
+pandas
+seaborn
+streamlit
